[package]
name = "backup-tools"
version = "1.7.2"
edition = "2021"
authors = ["Joel Dewey"]
description = "A Rust application to coordinate backups of applications hosted in my home Kubernetes cluster."
license = "GPL-3.0-only"
repository = "https://github.com/JoelDewey/backup-tools"
publish = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-name = "v{{version}}"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
chrono = { version = "0.4.37", default-features = false, features = ["alloc", "std", "clock"] }
crossbeam = "0.8.4"
ctrlc = { version = "3.4.3", features = ["termination"] }
dotenvy = "0.15.7"
envy = "0.4.2"
nix = { version = "0.28.0", features = ["signal"] }
rustls = "0.22.2"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.2"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ureq = { version = "2.9.6", features = ["native-certs", "json", "tls"] }
url = "2.5.0"
